testsuite/tests/rename/should_fail/T7164.stderr
T7164.hs:8:1: error: [GHC-29916] Multiple declarations of ‘derp’
  |
8 | derp = 123
  | ^^^^
  |
5 |     derp :: m a
  |     ^^^^^^^^^^^

